--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -488,7 +488,7 @@
     "posts": "Posts",
     "createPost": "Create Post",
     "editPost": "Edit Post",
-    "myGamingPost": "My Gaming Post",
+    "myGamingPost": "Post",
     "yourWallet": "Your Wallet",
     "buyPoints": "Buy Points",
     "chooseNetwork": "Choose Network",
