--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -488,7 +488,7 @@
     "posts": "Publicaciones",
     "createPost": "Crear Publicación",
     "editPost": "Editar Publicación",
-    "myGamingPost": "Mi Publicación de Juegos",
+    "myGamingPost": "Publicación",
     "yourWallet": "Tu Cartera",
     "buyPoints": "Comprar Puntos",
     "chooseNetwork": "Elegir Red",
